--- a/m-buddy/res/drawable/nav_button_selector.xml
+++ b/m-buddy/res/drawable/nav_button_selector.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-<!--     <item
+    <item
      android:state_selected="false"
         android:state_pressed="false"
-        android:drawable="@drawable/list_bg" /> -->
+        android:drawable="@drawable/banner_bg" />
  
     <item android:state_pressed="true"
-        android:drawable="@drawable/list_bg_hover" />
+        android:drawable="@drawable/nav_button_bg_hover" />
  
     <item android:state_selected="true"
      android:state_pressed="false"
-        android:drawable="@drawable/list_bg_hover" />
+        android:drawable="@drawable/banner_bg" />
 </selector>
