--- a/m-buddy/res/layout/header_search_bar_layout.xml
+++ b/m-buddy/res/layout/header_search_bar_layout.xml
@@ -1,31 +1,54 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/inner_search_dv"
-    android:layout_width="fill_parent"
-    android:layout_height="35dip"
-    android:background="@color/search_dv_bg"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@null"
     android:baselineAligned="false"
-    android:gravity="center_vertical" >
+    android:orientation="vertical"
+    android:layout_margin="3dp"
+    android:layout_marginRight="10dp" >
 
-    <ImageButton
-        android:id="@+id/search_btn"
-        style="@android:style/Widget.Button.Inset"
+    <LinearLayout android:id="@+id/search_dv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/magin_5"
-        android:background="@drawable/search_ico"
-        android:contentDescription="@string/default_desc" />
+            android:layout_height="wrap_content"
+             android:background="@null"
+             android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/search_box"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/search_box_bg"
-        android:hint="@string/search_hint"
-        android:maxLines="1"
-        android:paddingLeft="4dip"
-        android:paddingRight="4dip"
-        android:singleLine="true"
-        android:textSize="15sp" >
-    </EditText>
+        <EditText
+            android:id="@+id/search_box"
+            android:layout_width="263dp"
+            android:layout_height="35dp"
+            android:layout_margin="0dp"
+            android:background="@color/search_box_bg"
+            android:hint="@string/search_hint"
+            android:maxLines="1"
+            android:paddingLeft="10dip"
+            android:singleLine="true"
+            android:textSize="15sp" >
 
+        </EditText>
+
+        <ImageButton
+            android:id="@+id/search_btn_dv"
+            style="@android:style/Widget.Button.Inset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_btn"
+            android:contentDescription="@string/default_desc" />
+    </LinearLayout>
+
+	 <LinearLayout
+	     android:id="@+id/msg_dv"
+	     android:layout_width="wrap_content"
+	     android:layout_height="wrap_content"
+	     android:background="@null"
+	     android:orientation="horizontal" >
+
+    <TextView
+            android:id="@+id/msg_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/default_nav_msg"
+            android:textColor="@color/nav_msg_font_color" />
+    </LinearLayout>
 </LinearLayout>
