--- a/m-buddy/res/layout/listing_layout.xml
+++ b/m-buddy/res/layout/listing_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     tools:context=".Listing" >
 
-        <LinearLayout
+    <LinearLayout
         android:id="@+id/banner_dv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -28,42 +28,38 @@
             android:layout_gravity="center_vertical|center_horizontal|center"
             android:background="@null" >
 
-				<TextView
-				    android:id="@+id/textView1"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:layout_gravity="center_vertical|center_horizontal|center"
-				    android:layout_marginLeft="@dimen/margin_10"
-				    android:text="@string/main_buddy_page_title"
-				    android:textColor="@color/nav_font_color" />
-
+            <TextView
+                android:id="@+id/pageTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|center_horizontal|center"
+                android:layout_marginLeft="@dimen/margin_10"
+                android:text="@string/main_buddy_page_title"
+                android:textColor="@color/nav_font_color" />
         </LinearLayout>
     </LinearLayout>
-    
+
     <LinearLayout
         android:id="@+id/listing_dv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_below="@id/nav_dv"
+        android:background="@drawable/list_l_bg"
         android:orientation="vertical"
-        android:background="@drawable/list_l_bg" >
+        android:weightSum="1" >
 
         <ListView
             android:id="@+id/listing_list_view"
             android:layout_width="match_parent"
-            android:layout_height="540dp"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
             android:divider="@color/list_separator_bg"
             android:dividerHeight="1dp"
             android:listSelector="@drawable/list_selector" >
         </ListView>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/advert_dv"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_below="@id/listing_dv"
-        android:background="@color/advert_bg"
-        android:orientation="vertical" >
-    </LinearLayout>
+     <include layout="@layout/advert_layout"/>
+
 </RelativeLayout>
