--- a/m-buddy/res/layout/listing_row_template.xml
+++ b/m-buddy/res/layout/listing_row_template.xml
@@ -22,13 +22,6 @@
         android:background="@null"
         android:orientation="horizontal" >
 
-        <LinearLayout
-            android:id="@+id/listing_name_side_dv"
-            android:layout_width="5dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="5dp"
-            android:background="@color/listing_name_color" />
-
         <TextView
             android:id="@+id/listing_name"
             android:layout_width="wrap_content"
@@ -37,7 +30,8 @@
             android:textColor="@color/listing_name_color"
             android:textSize="@dimen/list_view_name_font_size"
             android:textStyle="bold"
-            android:typeface="sans" />
+            android:typeface="sans"
+            android:layout_marginLeft="5dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -48,13 +42,6 @@
         android:background="@null"
         android:orientation="horizontal" >
 
-        <LinearLayout
-            android:id="@+id/listing_tagline_side_dv"
-            android:layout_width="5dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="5dp"
-            android:background="@color/listing_tagline_color" />
-
         <TextView
             android:id="@+id/listing_tagline"
             android:layout_width="wrap_content"
@@ -63,7 +50,8 @@
             android:textColor="@color/listing_tagline_color"
             android:textSize="@dimen/list_view_tagline_font_size"
             android:textStyle="bold"
-            android:typeface="sans" />
+            android:typeface="sans"
+            android:layout_marginLeft="5dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -74,20 +62,14 @@
         android:background="@null"
         android:orientation="horizontal" >
 
-        <LinearLayout
-            android:id="@+id/listing_rating_side_dv"
-            android:layout_width="5dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="5dp"
-            android:background="@color/listing_rating_color" />
-
         <ImageView
             android:id="@+id/rating_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/default_desc"
-            android:paddingTop="5dp"
-            android:src="@drawable/rating_ico" />
+            android:src="@drawable/rating_ico" 
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="5dp"/>
 
     </LinearLayout>
 
