--- a/m-buddy/res/layout/main_buddy_layout.xml
+++ b/m-buddy/res/layout/main_buddy_layout.xml
@@ -28,44 +28,38 @@
             android:layout_gravity="center_vertical|center_horizontal|center"
             android:background="@null" >
 
-				<TextView
-				    android:id="@+id/textView1"
-				    android:layout_width="wrap_content"
-				    android:layout_height="wrap_content"
-				    android:layout_gravity="center_vertical|center_horizontal|center"
-				    android:layout_marginLeft="@dimen/margin_10"
-				    android:text="@string/main_buddy_page_title"
-				    android:textColor="@color/nav_font_color" />
-
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|center_horizontal|center"
+                android:layout_marginLeft="@dimen/margin_10"
+                android:text="@string/main_buddy_page_title"
+                android:textColor="@color/nav_font_color" />
         </LinearLayout>
-
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/dashboard_list_dv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentBottom="true"
         android:layout_below="@id/nav_dv"
+        android:background="@drawable/list_l_bg"
         android:orientation="vertical"
-        android:background="@drawable/list_l_bg" >
+        android:weightSum="1" >
 
         <ListView
             android:id="@+id/dashboard_list_view"
             android:layout_width="match_parent"
-            android:layout_height="540dp"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
             android:divider="@color/list_separator_bg"
             android:dividerHeight="1dp"
             android:listSelector="@drawable/list_selector" >
         </ListView>
+
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/advert_dv"
-        android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_below="@id/dashboard_list_dv"
-        android:background="@color/advert_bg"
-        android:orientation="vertical" >
-    </LinearLayout>
-
+     <include layout="@layout/advert_layout"/>
 </RelativeLayout>
