--- a/UGBuddy/res/layout/email_layout.xml
+++ b/UGBuddy/res/layout/email_layout.xml
@@ -10,7 +10,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="@string/default_email_subject_text"
-        android:singleLine="true" >
+        android:singleLine="true" 
+        android:inputType="textEmailSubject">
     </EditText>
 
     <EditText
