--- a/UGBuddy/res/values/colors.xml
+++ b/UGBuddy/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="details_right_side_bg">#DBB527</color>
     <color name="details_address_banner_color">#E1E1E1</color>
     <color name="default_white">#FFFFFF</color>
+    <color name="search_tip_color">#828282</color>
 
 </resources>
