--- a/UGBuddy/res/values/dimens.xml
+++ b/UGBuddy/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="margin_80">80dp</dimen>
     <dimen name="list_view_name_font_size">20dp</dimen>
     <dimen name="list_view_tagline_font_size">15dp</dimen>
+    <dimen name="details_address_font_size">18dp</dimen>
+    <dimen name="details_content_font_size">16dp</dimen>
 </resources>
